Cleaning up my core components and layouts

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,5 @@
-.layout-header-height {
-  height: 50px;
+/* Standard width for page content */
+.page-width-limit {
+  max-width: 800px;
+  width: 100%;
 }
