Few dialog css improvements

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,4 +2,7 @@
 .page-width-limit {
   max-width: 800px;
   width: 100%;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
 }
